--- a/basic.ipynb
+++ b/basic.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 입출력 함수"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -57,6 +65,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 빠른 입출력 함수"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -73,7 +89,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ↓ 아래 방법을 더 선호    \n",
+    "# ↓ 아래 방법을 더 선호   \n",
+    " \n",
     "import sys\n",
     "for _ in range(10000):\n",
     "    n3 = int(sys.stdin.readline())\n",
