--- a/BaekJoon/입출력 함수.ipynb
+++ b/BaekJoon/입출력 함수.ipynb
@@ -5,19 +5,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 입출력 함수"
+    "# 기본 입출력 함수"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "13\n"
      ]
     }
    ],
@@ -96,6 +96,63 @@
     "    n3 = int(sys.stdin.readline())\n",
     "    print(n3)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## #15552 빠른 A+B\n",
+    "https://www.acmicpc.net/problem/15552\n",
+    "- input() = sys.stdin.readline()\n",
+    "- 시간적인 면에서는 input()함수보다 sys.stdin.readline()함수가 더 적게 걸린다.\n",
+    "- 하지만 Jupyter, VSCode IDE 환경에서는 sys.stdin을 지원하지 않는 것 같다. 따라서 간단한 개념정도만 집고 넘어가자  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "46\n",
+      "505\n",
+      "100\n",
+      "2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 일반적인 방법\n",
+    "n = int(input())  # 5 입력  (5번 반복)\n",
+    "\n",
+    "for _ in range(n):\n",
+    "    a, b = map(int,input().split())\n",
+    "    if b == 0:\n",
+    "        pass\n",
+    "    else:\n",
+    "        print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 정답\n",
+    "import sys\n",
+    "\n",
+    "t = int(sys.stdin.readline())\n",
+    "\n",
+    "for i in range(t):\n",
+    "    a,b = map(int,sys.stdin.readline().split())\n",
+    "    print( a+b )"
+   ]
   }
  ],
  "metadata": {
@@ -114,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 (default, Sep 16 2021, 16:59:28) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
