--- a/BaekJoon/입출력 함수.ipynb
+++ b/BaekJoon/입출력 함수.ipynb
@@ -46,6 +46,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123 456\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b = input().split()\n",
+    "print(int(a), int(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -62,6 +80,43 @@
     "a, b = map(int, input().split())   # 두 입력값을 int로 전환\n",
     "print(a)\n",
     "print(b+10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = list(map(int, input().split()))\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['안녕안녕', '나는 승현', '손가락 아퍼']\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "data = [input().strip() for i in range(n)]\n",
+    "print(data)"
    ]
   },
   {
