--- a/BaekJoon/자료구조.ipynb
+++ b/BaekJoon/자료구조.ipynb
@@ -247,11 +247,313 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 실습"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **#9012 올바른 괄호**\n",
+    "스택"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No\n",
+      "No\n",
+      "No\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 정답\n",
+    "T = int(input())\n",
+    "for _ in range(T):\n",
+    "    stack = []\n",
+    "    isVPS = True\n",
+    "    for ch in input():\n",
+    "        if ch == '(':\n",
+    "            stack.append(ch)\n",
+    "        else:                     # ch == ')' 일 때\n",
+    "            if len(stack) > 0:    # stack이 비어있는지 검사한다. (stack이 비어있지 않으면, pop수행 )\n",
+    "                stack.pop()\n",
+    "            else:                 # stack이 비어있다. (닫는 괄호가 하나 더 들어와있다.)\n",
+    "                isVPS = False\n",
+    "                break\n",
+    "            \n",
+    "    if len(stack) > 0:   \n",
+    "        isVPS = False    # not vps\n",
+    "        \n",
+    "    print('YES' if isVPS else 'NO')\n",
+    "    \n",
+    "            "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **#2164 카드** \n",
+    "<첫번째 방법>   \n",
+    "1. 맨 앞의 값을 삭제 (삭제) O(N)\n",
+    "2. 맨 앞의 값을 맨 뒤로 보내기 (삭제, 삽입)   \n",
+    "→ 삽입 삭제 총 3번    \n",
+    "→ (N-1) X O(3N) = O(3N^2 - 3N) = O(N^2)    \n",
+    "→ 너무 큰 시간복잡도    \n",
+    "\n",
+    "<두번째 방법>\n",
+    "큐    \n",
+    "→ 큐의 삽입, 삭제 시간복잡도는 O(1)   \n",
+    "→ 최종 시간 복잡도: O(N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([1, 2, 3, 4, 5, 6])\n",
+      "deque([4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "#1\n",
+    "# N = int(input())\n",
+    "# dq = deque()\n",
+    "# for i in range(1, N+1):\n",
+    "#     dq.append(i)\n",
+    "# print(dq)\n",
+    "\n",
+    "#2\n",
+    "N = int(input())\n",
+    "dq = deque(range(1, N+1))    \n",
+    "print(dq)\n",
+    "\n",
+    "# ↑ 첫번째 방법과 두번째 방법 결과는 같음\n",
+    "\n",
+    "while len(dq) > 1:\n",
+    "    dq.popleft()   # 맨 위값(첫번째값)을 빼준다\n",
+    "    dq.append(dq.popleft())  # 두번째 값을 빼주고, 그 값을 마지막 위치로 옮긴다.\n",
+    "print(dq)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 정답 (input: 6)\n",
+    "from collections import deque\n",
+    "\n",
+    "N = int(input())\n",
+    "dq = deque(range(1, N+1))    \n",
+    "\n",
+    "while len(dq) > 1:\n",
+    "    dq.popleft()   # 맨 위값(첫번째값)을 빼준다\n",
+    "    dq.append(dq.popleft())  # 두번째 값을 빼주고, 그 값을 마지막 위치로 옮긴다.\n",
+    "\n",
+    "print(dq.popleft())\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "475712\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 정답 (input: 500000)\n",
+    "from collections import deque\n",
+    "\n",
+    "N = int(input())\n",
+    "dq = deque(range(1, N+1))    \n",
+    "\n",
+    "while len(dq) > 1:\n",
+    "    dq.popleft()   # 맨 위값(첫번째값)을 빼준다\n",
+    "    dq.append(dq.popleft())  # 두번째 값을 빼주고, 그 값을 마지막 위치로 옮긴다.\n",
+    "\n",
+    "print(dq.popleft())\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n",
+      "[3, 4, 5, 6, 2]\n",
+      "[5, 6, 2, 4]\n",
+      "[2, 4, 6]\n",
+      "[6, 4]\n",
+      "[4]\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 배열로 재구성 (시간초과)\n",
+    "\n",
+    "N = int(input())\n",
+    "# arr = [*range(1, N+1)]\n",
+    "arr = []\n",
+    "for i in range(1, N+1):\n",
+    "    arr.append(i)\n",
+    "print(arr)\n",
+    "\n",
+    "while len(arr) > 1:\n",
+    "    arr.pop(0)\n",
+    "    arr.append(arr.pop(0))\n",
+    "    print(arr)\n",
+    "        \n",
+    "print(arr.pop(0))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **#11286 절대값 힙**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **#1302 베스트셀러**\n",
+    "어떤 책들이 각각 몇권 팔렸는지 기록하고, 팔린 권 수 비교  \n",
+    "→ 맵(딕셔너리)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 3, 'b': 3}\n",
+      "3\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = dict()\n",
+    "for _ in range(int(input())):\n",
+    "    book = input()\n",
+    "    if book in d:   # 이미 딕셔너리에 book이 저장되어있으면,\n",
+    "        d[book] += 1   # value(권 수)를 1증가\n",
+    "    else:   # 새로 들어온 책이면,\n",
+    "        d[book] = 1\n",
+    "\n",
+    "print(d)\n",
+    "\n",
+    "# d.keys()  key값만 모아서 반환\n",
+    "# d.values()  value값만 모아서 반환\n",
+    "# d.items()  key, value 묶어서 전부 반환\n",
+    "m = max(d.values())\n",
+    "print(m)\n",
+    "\n",
+    "candidate = []\n",
+    "for k, v in d.items():\n",
+    "    if v == m:\n",
+    "        candidate.append(k)\n",
+    "\n",
+    "# print(sorted(candidate)[0])\n",
+    "candidate.sort()\n",
+    "print(candidate[0])\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 정답\n",
+    "d = dict()\n",
+    "for _ in range(int(input())):\n",
+    "    book = input()\n",
+    "    if book in d:   # 이미 딕셔너리에 book이 저장되어있으면,\n",
+    "        d[book] += 1   # value(권 수)를 1증가\n",
+    "    else:   # 새로 들어온 책이면,\n",
+    "        d[book] = 1\n",
+    "\n",
+    "m = max(d.values())\n",
+    "\n",
+    "candidate = []\n",
+    "for k, v in d.items():\n",
+    "    if v == m:\n",
+    "        candidate.append(k)\n",
+    "\n",
+    "candidate.sort()\n",
+    "print(candidate[0])\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
