--- a/BaekJoon/자료구조.ipynb
+++ b/BaekJoon/자료구조.ipynb
@@ -457,7 +457,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **#11286 절대값 힙**"
+    "### **#11286 절대값 힙**\n",
+    "- 배열에서 절댓값이 가장 작은 값을 출력하고, 그 값을 배열에서 제거한다\n",
+    "- x(input값)가 0이 아니라면 배열에 x라는 값을 삽입(추가)하는 연산이고, x가 0이라면 배열에서 절댓값이 가장 작은 값을 출력하고 그 값을 배열에서 제거\n",
+    "- <U>절댓값이 가장 작은 값이 여러개일 때는, 가장 작은 수를 출력하고, 그 값을 배열에서 제거</U>\n"
    ]
   },
   {
@@ -465,7 +468,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import heapq as hq\n",
+    "\n",
+    "# input = sys.stdin.readline\n",
+    "N = int(input())\n",
+    "\n",
+    "pq = []\n",
+    "for _ in range(N):\n",
+    "    x = int(input())\n",
+    "    if x:\n",
+    "       hq.heappush(pq, (abs(x),x))   # 절대값, 원본값 비교\n",
+    "    else:   # x = 0일 때\n",
+    "        hq.heappop(pq)\n",
+    "# 추후.."
+   ]
   },
   {
    "attachments": {},
