--- a/BaekJoon/Graph&Tree.ipynb
+++ b/BaekJoon/Graph&Tree.ipynb
@@ -170,7 +170,7 @@
    "source": [
     "## **#11724 연결요소의 개수**\n",
     "https://www.acmicpc.net/problem/11724       \n",
-    "\"0 ≤ M ≤ N×(N-1)/2\" : 자기자신을 뽑는 노드를 제외한 나머지   \n",
+    "\"0 ≤ M ≤ N×(N-1)/2\" : 자기자신을 뽑는 노드를 제외한 나머지  \n",
     "즉, 간선이 최대로 많이 들어오는 경우는 자기자신((0,0),(1,1)...)칸을 제외한 나머지 칸들이 다 1로 채워질 수 있다.  → 간선 개수가 거의 N^2에 육박 → 따라서 인접행렬"
    ]
   },
@@ -241,7 +241,7 @@
     "    \n",
     "for i in range(N):\n",
     "    if not check[i]:   # 체크 안된 얘를 발견하면\n",
-    "        ans += 1   # 연결요소 개수 늘리고\n",
+    "        ans += 1   # 연결요소 개수 늘리고 ★★\n",
     "        check[i] = True  # 체크해주고\n",
     "        dfs(i)\n",
     "        \n",
