done binary search

--- a/BaekJoon/이진탐색.ipynb
+++ b/BaekJoon/이진탐색.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "v = (0,1,3,3,6,6,6,7,8,8,9) # 선형 자료구조의 이름을 전달\n",
     "# 탐색할 값 전달\n",
-    "three = bisect_right(v,3) - bisect_left(v,3) # 3이상인 것들 중 첫번째 위치의 배열값 - 3초과인 것들 중 첫번째 위치의 배열값\n",
+    "three = bisect_right(v,3) - bisect_left(v,3) # 3초과인 것들 중 첫번째 위치의 배열값 - 3이상인 것들 중 첫번째 위치의 배열값\n",
     "four = bisect_right(v,4) - bisect_left(v,4) \n",
     "six = bisect_right(v,6) - bisect_left(v,6) \n",
     "print(f'number of 3: {three}')  # 4-2\n",
@@ -65,15 +65,224 @@
    "metadata": {},
    "source": [
     "## **#2512 예산**\n",
-    "https://www.acmicpc.net/problem/2512"
+    "https://www.acmicpc.net/problem/2512         \n",
+    "(0원 ~ 각 지역의 요청 예산금액의 최대값)범위에서 가운데에 위치한 금액을 상한선으로 간주 후, 총 예산금액(합)을 유추하여, 가능하다면 더 높은 금액으로, 불가능하다면 더 낮은 금액으로 상한선을 잡아간다.  → 즉, 이분탐색 사용(10000 X log2의100000) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "low: 0, mid: 75, high: 150, ans: 0\n",
+      "low: 76, mid: 113, high: 150, ans: 75\n",
+      "low: 114, mid: 132, high: 150, ans: 113\n",
+      "low: 114, mid: 122, high: 131, ans: 113\n",
+      "low: 123, mid: 127, high: 131, ans: 122\n",
+      "low: 128, mid: 129, high: 131, ans: 127\n",
+      "low: 128, mid: 128, high: 128, ans: 127\n",
+      "127\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "req = list(map(int, input().split()))\n",
+    "M = int(input())\n",
+    "\n",
+    "# 이분탐색을 위한 탐색 범위 설정\n",
+    "low = 0\n",
+    "high = max(req)\n",
+    "mid = (low + high) // 2\n",
+    "ans = 0\n",
+    "\n",
+    "def is_possible(mid):\n",
+    "    return sum(min(r, mid) for r in req) <= M  # 총 합이 M이하이면 가능\n",
+    "    \n",
+    "    \n",
+    "while low <= high:\n",
+    "    print(f\"low: {low}, mid: {mid}, high: {high}, ans: {ans}\")\n",
+    "    if is_possible(mid): \n",
+    "        low = mid + 1\n",
+    "        ans = mid\n",
+    "    else:\n",
+    "        high = mid - 1\n",
+    "    \n",
+    "    mid = (low + high)//2\n",
+    "    \n",
+    "    \n",
+    "print(ans)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "127\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 정답\n",
+    "N = int(input())\n",
+    "req = list(map(int, input().split()))\n",
+    "M = int(input())\n",
+    "\n",
+    "low = 0\n",
+    "high = max(req)\n",
+    "mid = (low + high) // 2\n",
+    "ans = 0\n",
+    "\n",
+    "def is_possible(mid):\n",
+    "    return sum(min(r, mid) for r in req) <= M  # 총 합이 M이하이면 가능\n",
+    "    \n",
+    "    \n",
+    "while low <= high:\n",
+    "    if is_possible(mid): \n",
+    "        low = mid + 1\n",
+    "        ans = mid\n",
+    "    else:\n",
+    "        high = mid - 1\n",
+    "    \n",
+    "    mid = (low + high)//2\n",
+    "    \n",
+    "    \n",
+    "print(ans)\n",
+    "    "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **#10815 숫자카드**\n",
+    "https://www.acmicpc.net/problem/10815"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-10, 2, 3, 6, 10]\n",
+      "4 5\n",
+      "4 4\n",
+      "1 1\n",
+      "1 2\n",
+      "2 3\n",
+      "3 3\n",
+      "3 3\n",
+      "0 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "from bisect import bisect_left, bisect_right\n",
+    "\n",
+    "N = int(input())\n",
+    "cards = sorted(map(int, input().split()))  # 이분탐색을 위해 정렬\n",
+    "print(cards)\n",
+    "M = int(input())\n",
+    "qry = list(map(int, input().split()))\n",
+    "# 선형탐색으로 찾을 시  BIG(NM)으로 500,000 * 500,000 로 시간초과 발생\n",
+    "# 이분탐색시 M * log(N) 500,000 * log(500,000)\n",
+    "\n",
+    "ans = []\n",
+    "for q in qry:\n",
+    "    l = bisect_left(cards,q)   # q 이상인 값들 중 첫번째인 값의 배열 위치\n",
+    "    r = bisect_right(cards,q)  # q 초과인 값들 중 첫번째인 값의 배열 위치\n",
+    "    print(l,r)\n",
+    "    # ans.append()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, 0, 1, 1, 0, 0, 1]\n",
+      "1 0 0 1 1 0 0 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 런타임 에러...\n",
+    "\n",
+    "from bisect import bisect_left, bisect_right\n",
+    "\n",
+    "N = int(input())\n",
+    "cards = sorted(map(int, input().split()))\n",
+    "M = int(input())\n",
+    "qry = list(map(int, input().split()))\n",
+    "ans = []\n",
+    "\n",
+    "for q in qry:\n",
+    "    l = bisect_left(cards,q)\n",
+    "    # r = bisect_right(cards,q)\n",
+    "    ans.append(1 if cards[l] == q else 0)\n",
+    "\n",
+    "'''\n",
+    "for q in qry:\n",
+    "    l = bisect_left(cards,q)\n",
+    "    if cards[l] == q:\n",
+    "        ans.append(1)\n",
+    "    else:\n",
+    "        ans.append(0)\n",
+    "'''\n",
+    "print(ans)\n",
+    "print(*ans)   # print(' '.join(map(str, ans)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 0 0 1 1 0 0 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 정답\n",
+    "\n",
+    "from bisect import bisect_left, bisect_right\n",
+    "\n",
+    "N = int(input())\n",
+    "cards = sorted(map(int, input().split()))\n",
+    "M = int(input())\n",
+    "qry = list(map(int, input().split()))\n",
+    "ans = []\n",
+    "for q in qry:\n",
+    "    l = bisect_left(cards,q)\n",
+    "    r = bisect_right(cards,q)\n",
+    "    ans.append(1 if (r - l) > 0 else 0)   # r-l: q가 카드에 몇개 있는지를 나타냄 (따라서 r-l > 0 이면 카드가 존재)\n",
+    "    \n",
+    "print(*ans)   # print(' '.join(map(str, ans)))\n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
