--- a/BaekJoon/이진탐색.ipynb
+++ b/BaekJoon/이진탐색.ipynb
@@ -167,7 +167,8 @@
    "metadata": {},
    "source": [
     "## **#10815 숫자카드**\n",
-    "https://www.acmicpc.net/problem/10815"
+    "https://www.acmicpc.net/problem/10815       \n",
+    "입력 넷째줄에 적힌 여러 숫자들을 입력 둘째줄에 적힌 숫자들과 비교하여, 같은 숫자가 있는지 확인(있으면 1, 없으면 0)"
    ]
   },
   {
