--- a/Others/Elice.ipynb
+++ b/Others/Elice.ipynb
@@ -214,7 +214,140 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(중급 5번부터)"
+    "<span style=\"color:red\">**Q. 입력받은 손님 수 만큼 주문한 메뉴의 총 가격을 출력하라**</span><br>\n",
+    "* **손님은 음료명으로 주문한다.**\n",
+    "* **아메리카노: 4100, 카페라떼: 4600, 카라멜마끼아또: 5100**\n",
+    "\n",
+    "**입력예시1**   \n",
+    "```python\n",
+    "3\n",
+    "아메리카노\n",
+    "카페라떼\n",
+    "카라멜마끼아또\n",
+    "```\n",
+    "**출력예시1**\n",
+    "```python\n",
+    "13800\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13800\n"
+     ]
+    }
+   ],
+   "source": [
+    "guests = int(input())  # 손님 수를 입력\n",
+    "baverages = [input() for _ in range(guests)]  # 입력한 손님 수 만큼 주문한 음료를 차례로 입력\n",
+    "mylist = []   # 주문한 메뉴의 가격을 담을 리스트 생성\n",
+    "for baverage in baverages:\n",
+    "    if baverage == '아메리카노':\n",
+    "        mylist.append(4100)\n",
+    "    elif baverage == '카페라떼':\n",
+    "        mylist.append(4600)\n",
+    "    else:\n",
+    "        mylist.append(5100)\n",
+    "    \n",
+    "print(sum(mylist))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:red\">**Q. A, B, C가 각각 지불해야하는 금액을 출력하는 프로그램을 작성해라**</span><br>\n",
+    "* **1. ``menu``라는 딕셔너리에 메뉴명을 키로, 메뉴의 가격을 값으로 저장되어있다.**\n",
+    "* **2. 이들이 주문한 내역은 ```먹은사람,메뉴이름,수량```의 형태로 사용자로부터 입력받는다. 만약 세명이 다같이 먹은 메뉴라면 ```K```라고 표시한다.**\n",
+    "* **3. ```-1```을 입력하면 입력을 중단한다.**\n",
+    "* **4. 각자 지불할 금액을 계산하여 출력한다.**\n",
+    "* **(주의)```k```는 3으로 나누어 떨어지는지 여부 체크 안해도 됨**\n",
+    "\n",
+    "\n",
+    "**입력예시1**   \n",
+    "```python\n",
+    "A,라면,1\n",
+    "B,김밥,2\n",
+    "B,떡볶이,1\n",
+    "K,튀김세트,1\n",
+    "A,콜라,1\n",
+    "-1\n",
+    "```\n",
+    "**출력예시1**\n",
+    "```python\n",
+    "A 8000\n",
+    "B 10000\n",
+    "C 1000\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A 8000\n",
+      "B 10000\n",
+      "C 1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "menu={\"떡볶이\":5000,\n",
+    "\"김밥\":2000,\n",
+    "\"튀김세트\":3000,\n",
+    "\"순대\":4000,\n",
+    "\"라면\":6000,\n",
+    "\"콜라\":1000,\n",
+    "\"사이다\":1000\n",
+    "}\n",
+    "\n",
+    "a=0 # A가 먹은 금액\n",
+    "b=0 # B가 먹은 금액\n",
+    "c=0 # C가 먹은 금액\n",
+    "k=0 # 함께 먹은 금액\n",
+    "\n",
+    "while True:\n",
+    "    # 지시사항 2번, 3번\n",
+    "    mystr = input()\n",
+    "    if mystr == '-1':\n",
+    "        break\n",
+    "\n",
+    "    Man = mystr.split(',')[0]\n",
+    "    Menu = mystr.split(',')[1]\n",
+    "    cnt = int(mystr.split(',')[2])\n",
+    "\n",
+    "    if Man == 'A':\n",
+    "        a += (menu[Menu] * cnt)\n",
+    "    elif Man == 'B':\n",
+    "        b += (menu[Menu] * cnt)\n",
+    "    elif Man == 'C':\n",
+    "        c += (menu[Menu] * cnt)\n",
+    "    else:  # Man == 'K'\n",
+    "        k += (menu[Menu] * cnt)\n",
+    "\n",
+    "# 지시사항 4번\n",
+    "k = k // 3   # 함께 먹은 금액은 세명이 동등하게 나누어 냄\n",
+    "\n",
+    "a+=k\n",
+    "b+=k\n",
+    "c+=k\n",
+    "\n",
+    "print ('A',a)\n",
+    "print ('B',b)\n",
+    "print ('C',c)"
    ]
   },
   {
